# opendata

./: .gitignore  .pre-commit-config.yaml  Makefile  manage.py  pyproject.toml
accounts/: urls.py
accounts/templates/accounts/: login.html  signup.html
opendata/: asgi.py  settings.py  urls.py  wsgi.py
outpatients/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
outpatients/management/commands/: update_outpatients.py
outpatients/migrations/: 0001_initial.py  0002_alter_outpatient_is_pediatrics_and_more.py  0003_rename_create_by_outpatient_created_by.py  0004_alter_outpatient_memo.py  0005_location.py
outpatients/templates/outpatients/: outpatient_detail.html  outpatient_edit.html  outpatient_new.html  top.html
templates/: base.html
