[tool.poetry]
name = "opendata"
version = "0.1.0"
description = ""
authors = ["Hiroki Takeda <takedahiroki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.9"
psycopg2 = "^2.9.9"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
pytest-django = "^4.8.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
bs4 = "^0.0.2"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.1"
markupsafe = "^2.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "opendata.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
